--- a/course-materials/keys/KEY-lecture6.1-typography.qmd
+++ b/course-materials/keys/KEY-lecture6.1-typography.qmd
@@ -294,7 +294,7 @@ final_plot
 #| echo: true
 # write plot to file (aka save as png) ----
 ggsave(
-  filename = here::here("week6", "images", "final-plot.png"),
+  filename = here::here("week6", "images", "salary-plot.png"),
   plot = final_plot, 
   device = "png",
   width = 8, 
@@ -310,7 +310,7 @@ Our final plot, saved as a PNG file. We'll learn about why this odd text renderi
 #| echo: false
 #| out-width: "100%"
 #| fig-align: "center"
-knitr::include_graphics("images/final-plot.png")
+knitr::include_graphics("images/salary-plot.png")
 ```
 
 ## Turn off `{showtext}` text rendering 
