--- a/course-materials/keys/KEY-lecture6.2-annotations.qmd
+++ b/course-materials/keys/KEY-lecture6.2-annotations.qmd
@@ -8,18 +8,11 @@ editor_options:
   chunk_output_type: inline
 ---
 
-::: {.callout-important}
-## TODO
-UPDATE FACECTED PLOT 
-:::
-
 ::: {.callout-note}
 This template follows [lecture 6.2 slides](../lecture-slides/lecture6.2-annotations-slides.qmd){target="_blank"}. Please be sure to cross-reference the slides, which contain important information and additional context!
 :::
 
-## Lobster plot
-
-### Setup
+## Setup
 
 ```{r}
 #| eval: true
@@ -28,8 +21,11 @@ This template follows [lecture 6.2 slides](../lecture-slides/lecture6.2-annotati
 #| message: false
 #.........................load libraries.........................
 library(tidyverse)
+library(googlesheets4)
+library(ggtext)
+library(scales)
 
-#..........................read in data..........................
+#......................read in lobster data......................
 
 # read in Google Sheet ----
 lobs <- googlesheets4::read_sheet("https://docs.google.com/spreadsheets/d/1DkDVcl_9rlaqznHfa_v1V1jtZqcuL75Q6wvAHpnCHuk/edit#gid=2143433533") |>
@@ -38,38 +34,27 @@ lobs <- googlesheets4::read_sheet("https://docs.google.com/spreadsheets/d/1DkDVc
 # alternatively, read in csv file ----
 # lobs <- read_csv(here::here("week6", "data", "metabolism-foraging-data.csv")) |>
 #   mutate(temp = as.factor(temp))
+
+#.....................read in mono lake data.....................
+
+# read in Google Sheet ----
+mono <- googlesheets4::read_sheet("https://docs.google.com/spreadsheets/d/1o0-89RFp2rI2y8hMQWy-kquf_VIzidmhmVDXQ02JjCA/edit#gid=164128885")
+
+# alternatively, read in csv ----
+# mono <- read_csv(here::here("week6", "data", "mono.csv"))
 ```
 
+## Lobster plot
+
 ### Create base plot
+
+<!-- THIS IS CODE STUDENTS WILL TYPE -->
 
 ```{r}
 #| eval: true
 #| echo: true
 #| warning: false
-#..........................create theme..........................
-lob_theme <- function(){
-  theme_light() +
-    theme(
-      axis.title.x = ggtext::element_markdown(size = 16,
-                                              lineheight = 1.5,
-                                              margin = margin(t = 10, r = 0, b = 0, l = 0)),
-      axis.title.y = ggtext::element_markdown(size = 16,
-                                              lineheight = 1.5,
-                                              margin = margin(t = 0, r = 10, b = 0, l = 0)),
-      axis.text = element_text(color = "black", 
-                               size = 14),
-      axis.ticks = element_line(color = "black"),
-      panel.border = element_rect(colour = "black", 
-                                  linewidth = 0.7),
-      panel.grid = element_blank(),
-      legend.title = element_text(size = 15),
-      legend.text = element_text(size = 13),
-      legend.position = c(0.95, 0.95),
-      legend.justification = c(0.95, 0.95),
-      legend.box.background = element_rect(linewidth = 0.9)
-    )
-}
-
+#| out-width: "100%"
 #..........................create scales.........................
 lob_palette <- c("11" = "#7B8698",
                  "16" = "#BAD7E5",
@@ -96,18 +81,37 @@ y_axis_lab <- glue::glue("Maximum Consumption Rate<br>
 #............................plot data...........................
 lob_plot <- ggplot(lobs, aes(x = SMR, y = avg_eaten,
                              color = temp, shape = temp, size = temp)) +
-  geom_point() +
-  scale_color_manual(values = lob_palette, name = "Temperature (ºC)") +
-  scale_shape_manual(values = lob_shapes, name = "Temperature (ºC)") +
-  scale_size_manual(values = lob_sizes, name = "Temperature (ºC)") +
+  geom_point(alpha = 0.8) +
+  scale_color_manual(values = lob_palette) +
+  scale_shape_manual(values = lob_shapes) +
+  scale_size_manual(values = lob_sizes) +
   scale_x_continuous(breaks = seq(0, 1.5, by = 0.2)) +
   scale_y_continuous(breaks = seq(0, 35, by = 5)) +
   labs(x = x_axis_lab,
-       y = y_axis_lab) +
-  lob_theme()
+       y = y_axis_lab,
+       color = "Temp (ºC)",
+       shape = "Temp (ºC)",
+       size = "Temp (ºC)") +
+  theme_light() +
+    theme(
+      axis.title.x = ggtext::element_markdown(size = 17,
+                                              margin = margin(t = 15, r = 0, b = 0, l = 0),
+                                              lineheight = 1.5),
+      axis.title.y = ggtext::element_markdown(size = 17,
+                                              margin = margin(t = 0, r = 15, b = 0, l = 0),
+                                              lineheight = 1.5),
+      axis.text = element_text(color = "black", size = 16),
+      panel.border = element_rect(colour = "black", linewidth = 0.7),
+      panel.grid = element_blank(),
+      legend.position = "top",
+      legend.title = element_text(size = 16),
+      legend.text = element_text(size = 14)
+    )
 
 lob_plot
 ```
+
+
 
 ### Adding annotations using `geom_text()` & `geom_rect()`
 
@@ -246,21 +250,6 @@ lob_plot +
 ```
 
 ## Mono Lake plot
-
-### Setup
-
-```{r}
-#| eval: true
-#| echo: true
-#| message: false
-#..........................read in data..........................
-
-# read in Google Sheet ----
-mono <- googlesheets4::read_sheet("https://docs.google.com/spreadsheets/d/1o0-89RFp2rI2y8hMQWy-kquf_VIzidmhmVDXQ02JjCA/edit#gid=164128885")
-
-# alternatively, read in csv ----
-# mono <- read_csv(here::here("week6", "data", "mono.csv"))
-```
 
 ### Create base plot 
 
