added note about color interpolation for classed map

--- a/course-materials/lecture-slides/lecture5.3-choropleth-slides.qmd
+++ b/course-materials/lecture-slides/lecture5.3-choropleth-slides.qmd
@@ -688,7 +688,7 @@ base_map +
 ::: {.column width="%"}
 
 ::: {.center-text .body-text-s}
-Breaks set to a width of **5** & rescaled with 0 at center
+Breaks set to a width of **5** & rescaled with 0 at center *(note: `{ggplot2}` interpolates colors to create our scale)*
 :::
 
 ```{r}
