--- a/course-materials/week5.qmd
+++ b/course-materials/week5.qmd
@@ -101,8 +101,8 @@ This week's discussion section will be a time to explore, share, and discuss "no
 
 | Assignment Type | Assignment Title               | Date Assigned  | Date Due                   |
 |-----------------|--------------------------------|----------------|----------------------------|
-| EOC             | EOC (week 5)                   | Mon 02/03/2025 | Mon 02/03/2025, 11:55pm PT |
-| SR              | Mid-course reflection (SR #2)  | Mon 02/03/2025 | Sat 02/08/2025, 11:59pm PT |
+| EOC             | [EOC (week 5)](https://forms.gle/s7NGALzHPbfcy8JC9)                   | Mon 02/03/2025 | Mon 02/03/2025, 11:55pm PT |
+| SR              | [Mid-course reflection (SR #2)](assignments/SR2-midcourse.qmd)  | Mon 02/03/2025 | Sat 02/08/2025, 11:59pm PT |
 : {.hover .bordered tbl-colwidths="[20,30,20,30]"}
 
 <!-- | Assignment Type | Assignment Title                                               | Date Assigned  | Date Due                   | -->
